<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addUser">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout12"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="365dp"
        android:layout_height="76dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#2196F3"
        app:hintTextColor="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        tools:ignore="DuplicateIds,MissingConstraints">

        <EditText
            android:id="@+id/txt_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="no"
            android:hint="Estatus"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="388dp"
        android:layout_height="56dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#2196F3"
        app:hintTextColor="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline16"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/txt_usuario"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="no"
            android:hint="@string/txt_User"
            android:inputType="text"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="75dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="388dp"
        android:layout_height="57dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#2196F3"
        app:hintTextColor="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline17"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/txt_nombre"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="no"
            android:hint="@string/txt_nombre"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="115dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="391dp"
        android:layout_height="58dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#2196F3"
        app:hintTextColor="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/txt_pa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:hint="@string/txt_ap"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="115dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="392dp"
        android:layout_height="63dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#2196F3"
        app:hintTextColor="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline14"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/txt_ma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:hint="@string/txt_am"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="115dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="384dp"
        android:layout_height="60dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#2196F3"
        app:hintTextColor="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/txt_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:hint="Correo"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="115dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="374dp"
        android:layout_height="65dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#2196F3"
        app:hintTextColor="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/txt_nac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:hint="@string/txt_nac"
            android:inputType="text|date"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="115dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="382dp"
        android:layout_height="64dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#2196F3"
        app:hintTextColor="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/txt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Contraseña"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="341dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="429dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="484dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="622dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="576dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="144dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="212dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="282dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="83dp" />

    <Button
        android:id="@+id/btnRegistrar"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:textColor="#2196F3"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline12"
        app:layout_constraintVertical_bias="0.777"
        app:rippleColor="#3F51B5"
        app:strokeColor="#3F51B5" />


</androidx.constraintlayout.widget.ConstraintLayout>